--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url = student-dev.cqliio9wm0rk.eu-central-1.rds.amazonaws.com/studentDevDB/
+spring.datasource.url = jdbc:mysql://student-dev.cqliio9wm0rk.eu-central-1.rds.amazonaws.com/studentDevDB
 spring.datasource.username=valera
 spring.datasource.password=
