added local postgres DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-spring.datasource.url = jdbc:mysql://student-dev.cqliio9wm0rk.eu-central-1.rds.amazonaws.com/studentDevDB
-spring.datasource.username=valera
-spring.datasource.password=
+#spring.datasource.url = jdbc:mysql://student-dev.cqliio9wm0rk.eu-central-1.rds.amazonaws.com/studentDevDB
+#spring.datasource.username=valera
+#spring.datasource.password=
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
